This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: test_ctypes leaks references and memory blocks
Type: Stage: resolved
Components: ctypes, Tests Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, pablogsal
Priority: normal Keywords: patch

Created on 2019-02-26 06:54 by pablogsal, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12045 merged benjamin.peterson, 2019-02-26 07:06
Messages (3)
msg336619 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-02-26 06:54
https://buildbot.python.org/all/#/builders/1/builds/515

OK (skipped=89)
.
test_ctypes leaked [72, 72, 72] references, sum=216
test_ctypes leaked [26, 26, 26] memory blocks, sum=78
2 tests failed again:
    test_ctypes test_inspect
== Tests result: FAILURE then FAILURE ==
msg336621 - (view) Author: Pablo Galindo Salgado (pablogsal) * (Python committer) Date: 2019-02-26 07:04
PR12045 fixes this
msg336624 - (view) Author: miss-islington (miss-islington) Date: 2019-02-26 07:12
New changeset d5a551c2694e32835bcdafc01d611f3227ca36b3 by Miss Islington (bot) (Benjamin Peterson) in branch 'master':
closes bpo-36115: Fix some reference leaks in typeobject.c. (GH-12045)
https://github.com/python/cpython/commit/d5a551c2694e32835bcdafc01d611f3227ca36b3
History
Date User Action Args
2022-04-11 14:59:11adminsetgithub: 80296
2019-02-26 07:12:13miss-islingtonsetstatus: open -> closed

nosy: + miss-islington
messages: + msg336624

resolution: fixed
stage: patch review -> resolved
2019-02-26 07:06:39benjamin.petersonsetkeywords: + patch
stage: patch review
pull_requests: + pull_request12072
2019-02-26 07:04:34pablogsalsetmessages: + msg336621
2019-02-26 06:54:50pablogsalcreate